--- a/npmExercises/package.json
+++ b/npmExercises/package.json
@@ -17,8 +17,13 @@
   },
   "homepage": "https://github.com/SamKlep/DC-Flex#readme",
   "dependencies": {
+    "axios": "^0.19.0",
+    "cat-facts": "^1.0.2",
+    "download-file": "^0.1.5",
+    "drawille-canvas": "^1.2.0",
     "global": "^4.4.0",
     "lodash": "^4.17.15",
+    "pdfkit": "^0.10.0",
     "speed-test": "^2.1.0",
     "speedtest-net": "^1.6.0",
     "wallpaper": "^4.4.1"
